--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aws.codestar.projecttemplates</groupId>
     <artifactId>CloudBinary</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Cloud Binary Sample Spring MVC Application</name>
 
@@ -24,13 +24,13 @@
     <distributionManagement>
     <snapshotRepository>
         <id>snapshots</id>
-        <name>a0bdlik6tnfce-artifactory-primary-0-snapshots</name>
-        <url>https://devopskesav.jfrog.io/artifactory/libs-snapshot</url>
+        <name>practise-libs-snapshot</name>
+        <url>https://jfrogpratice123.jfrog.io/artifactory/practise-libs-snapshot/</url>
     </snapshotRepository>
     <repository>
-        <id>central</id>
-        <name>a0bdlik6tnfce-artifactory-primary-0-releases</name>
-        <url>https://devopskesav.jfrog.io/artifactory/libs-releases</url>
+        <id>releases</id>
+        <name>practise-libs-release</name>
+        <url>https://jfrogpratice123.jfrog.io/artifactory/practise-libs-release/</url>
     </repository>	
 </distributionManagement>
     
